(@eviljs/reactx) fixes an overflow issue on Safari iOS (16)

--- a/packages/@eviljs/reactx/accordion.css
+++ b/packages/@eviljs/reactx/accordion.css
@@ -1,3 +1,5 @@
+/* AccordionList **************************************************************/
+
 .AccordionList-c2ae {
     list-style: none;
 }
@@ -9,6 +11,12 @@
 .head-ad0d {
     z-index: 1;
     width: 100%;
+}
+
+/* AccordionItem **************************************************************/
+
+.AccordionItem-de4f {
+    overflow: hidden;
 }
 
 .content-38aa {
